Fix heading descender clipping bug caused by overflow by adding padding-bottom

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -337,6 +337,7 @@ a i.fa-clock-o {
 }
 
 h1.full_name {
+  padding-bottom: 2px; // compensate for overflow:hidden, keep descenders visible
   overflow: hidden;
   text-overflow: ellipsis;
 }
